Postgres and Docker integration

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db.start": "docker compose up -d db",
+    "db.stop": "docker compose stop db",
+    "db.clear": "docker compose rm -sf db"
   },
   "dependencies": {
     "react": "^18",
