--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db.clear": "docker compose rm -sf db"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
