--- a/compose.yml
+++ b/compose.yml
@@ -22,3 +22,9 @@ services:
       - 5433:5432
     volumes:
       - ./data/create-docker-database.sh:/docker-entrypoint-initdb.d/init-db.sh:ro
+  
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
