--- a/compose.yml
+++ b/compose.yml
@@ -11,6 +11,9 @@ services:
     environment:
       - NODE_DEV=development
     #command: ["npm", "run", "build"]
+    depends_on:
+      db:
+        condition: service_healthy
 
   db:
     image: "postgres"
@@ -22,7 +25,12 @@ services:
       - 5433:5432
     volumes:
       - ./data/create-docker-database.sh:/docker-entrypoint-initdb.d/init-db.sh:ro
-  
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 1s
+      timeout: 5s
+      retries: 10
+
   adminer:
     image: adminer
     restart: always
