--- a/compose.yml
+++ b/compose.yml
@@ -18,9 +18,8 @@ services:
   db:
     image: "postgres"
     environment:
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_DB: playlist-app-db
+      POSTGRES_PASSWORD: pw4d5e3hfs83
+      POSTGRES_USER: playlist-app-db
     ports:
       - 5433:5432
     volumes:
