--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://playlist-app-db:pw4d5e3hfs83@localhost:5433/mydb?schema=public"
+DATABASE_URL="postgresql://playlist-app-db:pw4d5e3hfs83@localhost:5433/playlist-app-db?schema=public"
